--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-bootstrap": "^1.0.0-alpha.5",
+    "ember-browserify": "^1.2.0",
     "ember-cli": "2.12.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -44,5 +45,8 @@
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "date-fns": "^1.29.0"
+  }
 }
